samples/_failures_safe/1761471301_c29091_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_303d4a21.c: In function ‘main’:
./samples/SAFE/__tmp_303d4a21.c:134:11: error: expected ‘;’ at end of input
  134 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_303d4a21.c:134:5: error: expected declaration or statement at end of input
  134 |     printf
      |     ^~~~~~
